--- a/MQ/pom.xml
+++ b/MQ/pom.xml
@@ -12,6 +12,18 @@
     <artifactId>MQ</artifactId>
 
     <dependencies>
+        <!--模拟本地mq环境-->
+        <dependency>
+            <groupId>org.apache.rocketmq</groupId>
+            <artifactId>rocketmq-namesrv</artifactId>
+            <version>4.7.1</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.rocketmq</groupId>
+            <artifactId>rocketmq-broker</artifactId>
+            <version>4.7.1</version>
+        </dependency>
+
         <!--注意： 这里的版本,要和部署在服务器上的版本号一致-->
         <dependency>
             <groupId>org.apache.rocketmq</groupId>
