--- a/MQ/src/main/resources/application.properties
+++ b/MQ/src/main/resources/application.properties
@@ -1,5 +1,7 @@
 
 # application.properties
-rocketmq.name-server=192.168.118.131:9876
-rocketmq.producer.group=my-group
+#rocketmq.name-server=192.168.118.131:9876
+#rocketmq.producer.group=my-group
 
+rocketmq.name-server=127.0.0.1:9876
+rocketmq.producer.group=my-group
