--- a/javaTest/pom.xml
+++ b/javaTest/pom.xml
@@ -12,12 +12,20 @@
     <artifactId>javaTest</artifactId>
 
     <dependencies>
-        <!-- com.example.velocity.app  test -->
+        <!-- com.example.a_middlewares.velocity.app  test -->
         <dependency>
             <groupId>org.apache.velocity</groupId>
             <artifactId>velocity</artifactId>
             <version>1.7</version>
         </dependency>
+
+        <!-- com.example.a_middlewares.thymeleaf.app -->
+        <dependency>
+            <groupId>org.thymeleaf</groupId>
+            <artifactId>thymeleaf</artifactId>
+            <version>3.0.11.RELEASE</version>
+        </dependency>
+
     </dependencies>
 
 </project>
