--- a/javaTest/pom.xml
+++ b/javaTest/pom.xml
@@ -48,6 +48,14 @@
             <artifactId>itext-asian</artifactId>
             <version>5.2.0</version>
         </dependency>-->
+
+
+        <!-- excel工具 -->
+        <dependency>
+            <groupId>org.apache.poi</groupId>
+            <artifactId>poi-ooxml</artifactId>
+            <version>4.1.2</version>
+        </dependency>
     </dependencies>
 
 </project>
